--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
   "license": "BSD-2-Clause",
   "require": {
     "php": "^8.3.6",
-    "psr/clock":"1.0.0"
+    "psr/clock":"^1.0.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^12.0.2"
